# pypi_with_dependency_package

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/hydra_rhl/: __init__.py  __main__.py
src/hydra_rhl/core/: container.py  logger.py
src/hydra_rhl/examples/: eventConsumerExample.py  event_producer_example.py
src/hydra_rhl/infra/events/: consumer.py  producer.py  utils.py
src/hydra_rhl/infra/kafka/: kafka_hydra.py
src/hydra_rhl/settings/: config.py
